<resources>
    <string name="app_name">TodoApplication</string>
    <string name="add_item">Add Item</string>
    <string name="delete_all_items">Delete all Items</string>
    <string name="enter_task_details">Enter Task Details</string>
    <string name="enter_your_task">Enter Your Task</string>
    <string name="submit">Submit</string>
    <string name="choose_priority">Choose Priority</string>
    <string name="todo_application">TODO Application</string>
    <string name="demo_text">Demo text</string>
    <string name="demo_priority">Demo Priority</string>
    <string name="list_of_the_items_to_do_today">Check list</string>
    <string-array name="spinner_items">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>

</resources>